# AIOptimizersPlayground

./: .gitignore  BOptimizer.py  GD.py  README.md  SGD.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: __init__.py  code_snippets.py  descriptions.py  formulas.py  glossary.py  i18n.py  presets.py  regularization_viz.py  simulation.py  test_functions.py
notebooks/: OptimizersTutorial.ipynb
optimizers/: AMSGrad.py  Adaptive.py  Agrad.py  An.py  Aw.py  BOptimizer.py  GD.py  L.py  LARS.py  Make_vAriance_Reduction_Shine.py  RMSp.py  SGD.py  Sophia.py  __init__.py  adagrad.py  adam.py  adamw.py  adan.py  base.py  dtime.py  lion.py  mars.py  registry.py  rmsprop.py
pages/: 1_Playground.py  2_Glossary.py
playground/: __init__.py  description.py  export.py  guide.py  metrics.py  run.py  sidebar.py  state.py  styles.py  visualization.py
tests/: Test_SGD.py  __init__.py  test_AMSGrad.py  test_RMSp.py  test_adagrad.py  test_adam.py  test_adamw.py  test_adan.py  test_gd.py  test_lars.py  test_lion.py  test_mars.py  test_rmsprop.py  test_sophia.py
